# cs2_movement_downgrader

./: Cargo.toml  README.md
.github/workflows/: rust.yml  rust_build_linux.yml
src/: autoexec.cfg  autoexec.rs  cs2_locator.rs  main.rs
