[package]
name = "cs2_movement_downgrader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
walkdir = "2.4.0"

[target.'cfg(windows)'.dependencies]
bitness = "0.4.0"
winreg = "0.51.0"